more alignment fixes

--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@
     display: grid;
     grid-template-rows: 2fr 1fr;
     grid-area: header;
-    background-color: var(--eggshell);
     width: 100%;
 }
 
@@ -33,6 +32,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: var(--eggshell);
 }
 
 button {
@@ -64,10 +64,9 @@ button {
     grid-template-columns: repeat(26, 1fr);
     text-align: center;
     
-    background: white;
-    box-shadow: 0 7px 8px -3px var(--ecru);
+    background: var(--eggshell);
+    box-shadow: 0 7px 12px -3px var(--ecru);
     margin-bottom: 28px;
-    align-content: center;
 }
 
 .bottom a {
